llvm-spirv/test/negative/invalid-wordcount/invalid-wordcount-memberdecorate.spt
; OpMemberDecorate minimum = 4 (header + struct-type + member + decoration);
; the decoration literals are variable length. WordCount=3 is malformed.
; Test that malformed input is rejected early rather than silently causing
; integer underflow and potential process hang.

; RUN: not llvm-spirv %s -to-binary -o %t.spv 2>&1 | FileCheck %s
; CHECK: InvalidWordCount:

119734787 65536 0 10 0
2 Capability Kernel
3 MemoryModel 1 2
3 MemberDecorate 1 0 2
